--- a/scss/all.css
+++ b/scss/all.css
@@ -969,8 +969,8 @@ a {
     width: 82px;
     grid-template-columns: 25% 45% 15% 15%;
     grid-template-rows: 25% 25% 25% 25%;
-    column-gap: 4px;
-    row-gap: 4px; }
+    grid-column-gap: 4px;
+    grid-row-gap: 4px; }
     .app-window .rows .block {
       background-color: #efefef;
       border-radius: 2px; }
@@ -1010,7 +1010,7 @@ a {
   height: 30px;
   display: grid;
   grid-template-columns: repeat(15, 15px);
-  column-gap: 5px;
+  grid-column-gap: 5px;
   transform: translateX(-140px);
   animation: blocks 4s linear infinite; }
   .blocks .block {
